Fixed issue with current location SVG on IE11

--- a/static/scss/PUB/_Component_gmap.scss
+++ b/static/scss/PUB/_Component_gmap.scss
@@ -171,9 +171,16 @@
 							margin-left: 20px;
 						}
 
-						.current-location:hover {
-							svg path {
-								fill: $red;
+						.current-location {
+							&.svg-icon svg {
+								width: 28px;
+								height: 28px;
+							}
+
+							&:hover {
+								svg path {
+									fill: $red;
+								}
 							}
 						}
 	
